--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -1,11 +1,12 @@
 {% extends "auctions/layout.html" %}
 {% load crispy_forms_tags %}
+{% load static %}
 
 {% block body %}
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-9 col-md-6 m-0 text-center p-2">
-                <img src="https://placehold.it/1080x720/" alt="Image Placeholder" class="img-fluid" />
+                <img src="{{ listing.imageURL }}" alt="Image Placeholder" class="img-fluid" />
             </div>
             <div class="col-lg-3 col-md-6 m-0 bg-light p-2">
                 <div class="container">
