--- a/commerce/auctions/static/auctions/styles.css
+++ b/commerce/auctions/static/auctions/styles.css
@@ -1,7 +1,3 @@
-body {
-    padding: 10px;
-}
-
 .ta {
     height: 300px;
     resize: none;
@@ -13,4 +9,24 @@ body {
 
 .font-w-300 {
     font-weight: 300;
+}
+
+.active-card {
+    max-height: 450px;
+}
+
+.active-card:hover {
+    text-decoration: none;
+}
+
+@media (max-width: 992px) {
+    .nav-btn {
+        margin: 10px 0px;
+    }
+}
+
+@media (min-width: 993px) {
+    .nav-btn {
+        margin: 0px 10px;
+    }
 }
