--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -42,6 +42,15 @@
                         </ul>
                     </div>
                 </div>
+
+                {% if user.is_authenticated %}
+
+                    <br />
+
+                    <div class="container-fluid text-center">
+                        <a href = "{% url 'add_watchlist' listing.title %}" class = "btn btn-primary btn-sm">Add to watchlist</a>
+                    </div>
+                {% endif %}
             </div>
         </div>
 
